--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <html>  
-    
+    <head>
+        <title>Fiona Chen's resume</title>
+    </head>
 </html>
+
+<body>
+    <header id="header">
+        <h1><b>FIONA LUO-HAN CHEN</b></h1>
+        <hr>idk resume title<hr>
+    </header>
+</body>
