--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>  
     <head>
+        <link href="stlye.css" rel="stylesheet">
         <title>Fiona Chen's resume</title>
     </head>
 </html>
@@ -9,4 +10,7 @@
         <h1><b>FIONA LUO-HAN CHEN</b></h1>
         <hr>idk resume title<hr>
     </header>
+    <main>
+        
+    </main>
 </body>
