day 3- adding headings and links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,43 @@
         <hr>idk resume title<hr>
     </header>
     <main>
-        
+        <article id="mainleft">
+            <section>
+                <h2>CONTACTS</h2>
+                <!--CONTACT INFO-->
+                <p>
+                    Email:
+                    <a href= "mailto: fionaluo-hanc977@deltalearns.ca">fionaluo-hanc977@deltalearns.ca</a>
+                </p>
+                <p>
+                    Instagram:
+                    <a href="https://www.instagram.com/lh.cfei?igsh=bGZiY3Q0ZWV1M2E5"> lh.cfei </a>
+                </p>
+                <p>
+                    Twitter:
+                    <a href="https://x.com/LH_cfei?s=09">LH_cfei</a>
+                </p>
+            </section>
+            <section>
+                <h2>SKILLS</h2>
+                <!--SKILLS-->
+                <li>Graphic design</li>
+                <li>Adobe Photoshop, InDesign</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>VS Code</li>
+            </section>
+            <section>
+                <!--SCHOOL/EDUCATION-->
+                <h2>EDUCATION</h2>
+                <p>Seaquam Secondary</p>
+                <p>2021-2026</p>
+            </section>
+            <!--About me and the company I want to work for-->
+            <h2>ABOUT ME</h2>
+            <p></p>
+            <!--Experiences-->
+            <h2>EXPERIENCES</h2>
+        </article>
     </main>
 </body>
