--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="header">
         <h1><b>FIONA LUO-HAN CHEN</b></h1>
-        <hr>idk resume title<hr>
+        <hr> <hr>
     </header>
     <main>
         <article id="mainleft">
@@ -19,15 +19,20 @@
                 <h2>CONTACTS</h2>
                 <!--CONTACT INFO-->
                 <p>
-                    <a href= "mailto: fionaluo-hanc977@deltalearns.ca">fionaluo-hanc977@deltalearns.ca</a>
+                    <img src="email.png" height="15">
+                    <a href= "mailto: fionaluo-hanc977@deltalearns.ca"> fionaluo-hanc977@deltalearns.ca</a>
                 </p>
                 <p>
-                    <a href="#" class="fa fa-instagram"></a>
+                    <img src="insta.png" height="15">
                     <a href="https://www.instagram.com/lh.cfei?igsh=bGZiY3Q0ZWV1M2E5"> lh.cfei </a>
                 </p>
                 <p>
-                    <a href="#" class="fa fa-twitter"></a>
+                    <img src="x.png" height="15">
                     <a href="https://x.com/LH_cfei?s=09">LH_cfei</a>
+                </p>
+                <p>
+                    <img src="phone.png" height="15">
+                    2355126696
                 </p>
             </section>
             <section>
@@ -44,7 +49,7 @@
                 <!--SCHOOL/EDUCATION-->
                 <h2>EDUCATION</h2>
                 <p>Seaquam Secondary</p>
-                <p>2021-2026</p>
+                <p>2021 - Present</p>
             </section>
             <!--About me and the company I want to work for-->
             <section> 
@@ -54,8 +59,19 @@
            
             <!--Experiences-->
             <section>
-                <h2>EXPERIENCES</h2>
+                <h2>VOLUNTEERING</h2>
+                <p> Heartwarming Festival | December 2023</p>
+                <p> Hours:8</p>
                 <p> </p>
+
+            </section>
+
+            <section>
+                <h2>ACHIEVEMENTS</h2>
+                <p>June 2019 | RCM Level 8 Piano Repitoire First Class Honours Certificate</p>
+                <p>October 2019 | RCM Level 8 Piano Theory First Class Honours Certificate</p>
+                <p>2021-2022, 2022-2023 | Honour Role</p>
+
             </section>
             
         </article>
