--- a/index.html
+++ b/index.html
@@ -69,9 +69,16 @@
             <section>
                 <h2>ACHIEVEMENTS</h2>
                 <p>June 2019 | RCM Level 8 Piano Repitoire First Class Honours Certificate</p>
+                <br>
                 <p>October 2019 | RCM Level 8 Piano Theory First Class Honours Certificate</p>
+                <br>
                 <p>2021-2022, 2022-2023 | Honour Role</p>
 
+            </section>
+
+            <section>
+                <h2>REFERENCES</h2>
+                <p>Mr.Arends</p>
             </section>
             
         </article>
