--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
         <article id="mainleft">
             <section>
+                <div>
                 <h2>CONTACTS</h2>
                 <!--CONTACT INFO-->
                 <p>
@@ -51,7 +52,9 @@
                 <p>Seaquam Secondary</p>
                 <p>2021 - Present</p>
             </section>
+        </div>
             <!--About me and the company I want to work for-->
+            <div class="rightside">
             <section> 
                 <h2>ABOUT ME</h2>
                 <p>An aspiring artist who enjoys the use of technology and design.</p>
@@ -80,7 +83,7 @@
                 <h2>REFERENCES</h2>
                 <p>Mr.Arends</p>
             </section>
-            
+            </div>
         </article>
     </main>
 </body>
