--- a/index.html
+++ b/index.html
@@ -1,89 +1,89 @@
-<html>  
-    <head>
-        <link href="stlye.css" rel="stylesheet">
-        <title>Fiona Chen's resume</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href='./style.css' rel='stylesheet'>
-        
-    </head>
-</html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fiona Chen's resume</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
+    <div class="container">
     <header id="header">
         <h1><b>FIONA LUO-HAN CHEN</b></h1>
-        <hr> <hr>
+        <hr> HIGHSCHOOL STUDENT<hr>
     </header>
     <main>
-        <article id="mainleft">
-            <section>
-                <div>
-                <h2>CONTACTS</h2>
-                <!--CONTACT INFO-->
-                <p>
-                    <img src="email.png" height="15">
-                    <a href= "mailto: fionaluo-hanc977@deltalearns.ca"> fionaluo-hanc977@deltalearns.ca</a>
-                </p>
-                <p>
-                    <img src="insta.png" height="15">
-                    <a href="https://www.instagram.com/lh.cfei?igsh=bGZiY3Q0ZWV1M2E5"> lh.cfei </a>
-                </p>
-                <p>
-                    <img src="x.png" height="15">
-                    <a href="https://x.com/LH_cfei?s=09">LH_cfei</a>
-                </p>
-                <p>
-                    <img src="phone.png" height="15">
-                    2355126696
-                </p>
-            </section>
-            <section>
-                <h2>SKILLS</h2>
-                <!--SKILLS-->
-                <li>Graphic design</li>
-                <li>Traditional & digital art</li>
-                <li>Adobe Photoshop, InDesign</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>VS Code</li>
-            </section>
-            <section>
-                <!--SCHOOL/EDUCATION-->
-                <h2>EDUCATION</h2>
-                <p>Seaquam Secondary</p>
-                <p>2021 - Present</p>
-            </section>
+        <div class="column" style="width: 48%; float: left;">
+            <article>
+                <section>
+                    <h2>CONTACTS</h2>
+                    <!--CONTACT INFO-->
+                    <p>
+                        <img src="email.png" height="15">
+                        <a href= "mailto: fionaluo-hanc977@deltalearns.ca"> fionaluo-hanc977@deltalearns.ca</a>
+                    </p>
+                    <p>
+                        <img src="insta.png" height="15">
+                        <a href="https://www.instagram.com/lh.cfei?igsh=bGZiY3Q0ZWV1M2E5"> lh.cfei </a>
+                    </p>
+                    <p>
+                        <img src="x.png" height="15">
+                        <a href="https://x.com/LH_cfei?s=09">LH_cfei</a>
+                    </p>
+                    <p>
+                        <img src="phone.png" height="15">
+                        2365126696
+                    </p>
+                </section>
+                <section>
+                    <h2>SKILLS</h2>
+                    <!--SKILLS-->
+                    <ul>
+                        <li>Graphic design</li>
+                        <li>Traditional & digital art</li>
+                        <li>Adobe Photoshop, InDesign</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>VS Code</li>
+                    </ul>
+                </section>
+                <section>
+                    <!--SCHOOL/EDUCATION-->
+                    <h2>EDUCATION</h2>
+                    <p>Seaquam Secondary</p>
+                    <p>2021 - Present</p>
+                </section>
+            </article>
         </div>
-            <!--About me and the company I want to work for-->
-            <div class="rightside">
-            <section> 
-                <h2>ABOUT ME</h2>
-                <p>An aspiring artist who enjoys the use of technology and design.</p>
-            </section>
-           
-            <!--Experiences-->
-            <section>
-                <h2>VOLUNTEERING</h2>
-                <p> Heartwarming Festival | December 2023</p>
-                <p> Hours:8</p>
-                <p> </p>
-
-            </section>
-
-            <section>
-                <h2>ACHIEVEMENTS</h2>
-                <p>June 2019 | RCM Level 8 Piano Repitoire First Class Honours Certificate</p>
-                <br>
-                <p>October 2019 | RCM Level 8 Piano Theory First Class Honours Certificate</p>
-                <br>
-                <p>2021-2022, 2022-2023 | Honour Role</p>
-
-            </section>
-
-            <section>
-                <h2>REFERENCES</h2>
-                <p>Mr.Arends</p>
-            </section>
-            </div>
-        </article>
+        <!--About me and the company I want to work for-->
+        <div class="column" style="width: 48%; float: right;">
+            <article>
+                <section> 
+                    <h2>ABOUT ME</h2>
+                    <p>An aspiring artist who enjoys the use of technology and design.</p>
+                </section>
+                <!--Experiences-->
+                <section>
+                    <h2>VOLUNTEERING</h2>
+                    <p> Heartwarming Festival | December 2023</p>
+                    <p> Hours:8</p>
+                    <p> </p>
+                </section>
+                <section>
+                    <h2>ACHIEVEMENTS</h2>
+                    <p>June 2019 | RCM Level 8 Piano Repitoire First Class Honours Certificate</p>
+                    <br>
+                    <p>October 2019 | RCM Level 8 Piano Theory First Class Honours Certificate</p>
+                    <br>
+                    <p>2021-2022, 2022-2023 | Honour Role</p>
+                </section>
+                <section>
+                    <h2>REFERENCES</h2>
+                    <p>Mr.Arends</p>
+                </section>
+            </article>
+        </div>
     </main>
+    </div>
 </body>
+</html>
