--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <img src="phone.png" height="15">
                         2365126696
                     </p>
+                    <hr>
                 </section>
                 <section>
                     <h2>SKILLS</h2>
@@ -60,8 +61,9 @@
             <article>
                 <section> 
                     <h2>ABOUT ME</h2>
-                    <p>An aspiring artist who enjoys the use of technology and design.</p>
+                    <p>An aspiring artist who enjoys the use of technology and design. I wish to work in a position that contributes to both aspects of these interests.</p>
                 </section>
+                <hr>
                 <!--Experiences-->
                 <section>
                     <h2>VOLUNTEERING</h2>
